<resources>
    <string name="app_name">Softinsa</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="str_textview">TextView</string>
    <string name="str_imageview">ImageView</string>
    <string name="str_image_button">ImageButton</string>
    <string name="str_utilizador">Utilizador</string>
    <string name="str_opcoes">Opções</string>
    <string name="str_vagas">Vagas</string>
    <string name="str_outras_opcoes">Outras Opções</string>
    <string name="str_notificacoes">Notificações</string>
    <string name="str_eventos">Eventos</string>
    <string name="str_sair">Sair</string>
    <string name="str_outros">Outros</string>
    <string name="str_iniciar_sessao">Iniciar sessão</string>
    <string name="str_aguarde_reticencias">Aguarde…</string>
    <string name="str_criar_conta">Criar conta</string>
    <string name="str_email">E-mail</string>
    <string name="str_palavra_passe">Palavra-passe</string>
    <string name="str_esqueceu_palavra_passe"><u>Esqueceu-se da palavra-passe?</u></string>
    <string name="str_iniciar_sessao_com">Iniciar sessão com</string>
    <string name="str_nao_tem_uma_conta">Não tem uma conta?</string>
    <string name="str_crie_uma_aqui">Crie uma aqui!</string>
    <string name="str_email_asterisco">E-mail *</string>
    <string name="str_nome_proprio_asterisco">Nome próprio *</string>
    <string name="str_apelido_asterisco">Apelido *</string>
    <string name="str_palavra_passe_asterisco">Palavra-passe *</string>
    <string name="str_confirmar_palavra_passe_asterisco">Confirmar palavra-passe *</string>
    <string name="str_data_nascimento_asterisco">Data de nascimento *</string>
    <string name="str_genero_asterisco">Género *</string>
    <string name="str_masculino">Masculino</string>
    <string name="str_feminino">Feminino</string>
    <string name="str_outro">Outro</string>
    <string name="str_telefone_pessoal">Telefone pessoal</string>
    <string name="str_localidade">Localidade</string>
    <string name="str_criar_nova_conta">Criar nova conta</string>
    <string name="str_recuperar_palavra_passe">Recuperar palavra-passe</string>
    <string name="str_encontrar_conta">Encontre a sua conta</string>
    <string name="str_introduza_email_conta_asterisco">Introduza o e-mail da sua conta *</string>
    <string name="str_email_conta">E-mail da sua conta</string>
    <string name="str_enviar_ligacao_email">Enviar ligação para o e-mail</string>
    <string name="str_perfil">Perfil</string>
    <string name="str_data_registo">Data de registo</string>
    <string name="str_nome_asterisco">Nome *</string>
    <string-array name="str_array_generos">
        <item>Feminino</item>
        <item>Masculino</item>
        <item>Outro</item>
    </string-array>
    <string name="str_linkedin">Linkedin</string>
    <string name="str_curriculo">Currículo</string>
    <string name="str_foto">Foto</string>
    <string name="str_atualizar_perfil">Atualizar perfil</string>
    <string name="str_vagas_disponiveis">Vagas disponíveis</string>
    <string name="str_sem_permissoes">Sem permissões</string>
    <string name="str_nome">Nome</string>
    <string name="str_subtitulo">Subtítulo</string>
    <string name="str_nome_candidato_asterisco">Nome do candidato *</string>
    <string name="str_email_candidato_asterisco">E-mail do candidato *</string>
    <string name="str_telefone_candidato">Telefone do candidato</string>
    <string name="str_linkedin_candidato">Linkedin do candidato</string>
    <string name="str_curriculo_candidato">Currículo do candidato</string>
    <string name="str_endereco_ficheiro">Endereço do ficheiro</string>
    <string name="str_carregar_ficheiro">Carregar ficheiro</string>
    <string name="str_gerir_vagas">Gerir vagas</string>
    <string name="str_estado">Estado</string>
    <string name="str_fabcreate">fabCreate</string>
    <string name="str_detalhes_vaga">Detalhes da vaga</string>
    <string name="str_nome_vaga">Nome da vaga</string>
    <string name="str_subtitulo_vaga">Subtítulo da vaga</string>
    <string name="str_tipo_vaga">Tipo de vaga</string>
    <string name="str_descricao_perfil">Descrição do perfil</string>
    <string name="str_candidatar_me">Candidatar-me</string>
    <string name="str_recomendar_vaga">Recomendar vaga</string>
    <string name="str_editar_vaga">Editar vaga</string>
    <string name="str_criar_vaga">Criar vaga</string>
    <string name="str_nome_vaga_asterisco">Nome da vaga *</string>
    <string name="str_subtitulo_vaga_asterisco">Subtítulo da vaga *</string>
    <string name="str_localidade_asterisco">Localidade *</string>
    <string name="str_tipo_vaga_asterisco">Tipo de vaga *</string>
    <string name="str_externo">Externo</string>
    <string name="str_interno">Interno</string>
    <string name="str_descricao_perfil_asterisco">Descrição do perfil *</string>
    <string name="str_candidaturas">Candidaturas</string>
    <string name="str_vaga">Vaga</string>
    <string name="str_data_nascimento">Data de nascimento</string>
    <string name="str_genero">Género</string>
    <string name="str_curriculo_asterisco">Currículo *</string>
    <string name="str_observacao_candidato"><b><u>Observação:</u></b> Por favor, certifique-se que os dados do seu perfil estão atualizados.</string>
    <string name="str_candidatura">Candidatura</string>
    <string name="str_pretencao_salarial">Pretenção salarial</string>
    <string name="str_pretencao_salarial_label">%s€</string>
    <string name="str_simbolo_euro">€</string>
    <string name="str_observacoes">Observações</string>
    <string name="str_mensagem">Mensagem</string>
    <string name="str_detalhes_candidatura">Detalhes da candidatura</string>
    <string name="str_data_criacao">Data de criação</string>
    <string name="str_criar_reuniao_entrevista">Criar reunião da entrevista</string>
    <string name="str_aceitar_candidatura">Aceitar candidatura</string>
    <string name="str_rejeitar_candidatura">Rejeitar candidatura</string>
    <string name="str_entrevistas">Entrevistas</string>
    <string name="str_candidato">Candidato</string>
    <string name="str_editar_entrevista">Editar entrevista</string>
    <string name="str_nome_candidato">Nome do candidato</string>
    <string name="str_descricao_entrevista_asterisco">Descrição da entrevista *</string>
    <string name="str_detalhes_entrevista">Detalhes da entrevista</string>
    <string name="str_entrevista">Entrevista</string>
    <string name="str_descricao">Descrição</string>
    <string name="str_visualizar_notas_entrevista">Visualizar notas da entrevista</string>
    <string name="str_notas_entrevista">Notas da entrevista</string>
    <string name="str_autor_nota">Autor da nota</string>
    <string name="str_texto_nota">Texto da nota</string>
    <string name="str_criar_nota">Criar nota</string>
    <string name="str_adicionar_nota_entrevista">Adicionar uma nota à entrevista</string>
    <string name="str_editar_nota_selecionada_entrevista">Editar a nota selecionada da entrevista</string>
    <string name="str_observacoes_entrevista_asterisco">Observações da entrevista *</string>
    <string name="str_detalhes_nota">Detalhes da nota</string>
    <string name="str_nota">Nota</string>
    <string name="str_autor">Autor</string>
    <string name="str_texto">Texto</string>
    <string name="str_editar_nota">Editar nota</string>
    <string name="str_reunioes_entrevistas">Reuniões das entrevistas</string>
    <string name="str_reunioes_negocios">Reuniões dos negócios</string>
    <string name="str_criar_reuniao">Criar reunião</string>
    <string name="str_titulo_reuniao_asterisco">Título da reunião *</string>
    <string name="str_tipo_reuniao_asterisco">Tipo de reunião *</string>
    <string name="str_reuniao_sobre_entrevista">Reunião sobre entrevista</string>
    <string name="str_reuniao_sobre_oportunidade">Reunião sobre oportunidade</string>
    <string name="str_data_inicio_reuniao_asterisco">Data de início da reunião *</string>
    <string name="str_hora_inicio_reuniao_asterisco">Hora de início da reunião *</string>
    <string name="str_data_fim_reuniao_asterisco">Data de fim da reunião *</string>
    <string name="str_hora_fim_reuniao_asterisco">Hora de fim da reunião *</string>
    <string name="str_descricao_reuniao_asterisco">Descrição da reunião *</string>
    <string name="str_notificar_participantes_email">Notificar os participantes por e-mail</string>
    <string name="str_aviso_previo_reuniao">Aviso prévio da reunião</string>
    <string name="str_editar_reuniao_entrevista">Editar reunião da entrevista</string>
    <string name="str_criar_reuniao_oportunidade">Criar reunião da oportunidade</string>
    <string name="str_editar_reuniao_oportunidade">Editar reunião da oportunidade</string>
    <string name="str_detalhes_reuniao">Detalhes da reunião</string>
    <string name="str_titulo_reuniao">Título da reunião</string>
    <string name="str_autor_reuniao">Autor da reunião</string>
    <string name="str_tipo_reuniao">Tipo de reunião</string>
    <string name="str_inicio_reuniao">Início da reunião</string>
    <string name="str_fim_reuniao">Fim da reunião</string>
    <string name="str_notificacao_reuniao">Notificação da reunião</string>
    <string name="str_descricao_reuniao">Descrição da reunião</string>
    <string name="str_editar_reuniao">Editar reunião</string>
    <string name="str_adicionar_participantes_reuniao">Adicionar participantes à reunião</string>
    <string name="str_utilizadores_reuniao">Utilizadores da reunião</string>
    <string name="str_observacao_utilizadores_reuniao"><b>Observação:</b> Ao adicionar um utilizador à reunião, ele não poderá ser removido posteriormente. Certifique-se de selecionar apenas os utilizadores que deseja incluir na reunião.</string>
    <string name="str_beneficios">Benefícios</string>
    <string name="str_detalhes_beneficio">Detalhes do benefício</string>
    <string name="str_imagem">Imagem</string>
    <string name="str_editar_beneficio">Editar benefício</string>
    <string name="str_criar_beneficio">Criar benefício</string>
    <string name="str_nome_beneficio_asterisco">Nome do benefício *</string>
    <string name="str_subtitulo_beneficio_asterisco">Subtítulo do benefício *</string>
    <string name="str_descricao_beneficio_asterisco">Descrição do benefício *</string>
    <string name="str_imagem_beneficio">Imagem do benefício</string>
    <string name="str_endereco_imagem">Endereço da imagem</string>
    <string name="str_carregar_imagem">Carregar imagem</string>
    <string name="str_ideias">Ideias</string>
    <string name="str_titulo">Título</string>
    <string name="str_relatorio_ideia">Relatório da ideia</string>
    <string name="str_observacao_ideia_aceite">Explique o motivo pela qual a ideia foi aceite, digitando-o numa mensagem para o autor da ideia e/ou para o administrador do sistema.</string>
    <string name="str_informar_autor">Informar o autor</string>
    <string name="str_relatorio_autor_asterisco">Relatório para o autor *</string>
    <string name="str_informar_administrador">Informar o administrador</string>
    <string name="str_relatorio_administrador_asterisco">Relatório para o administrador *</string>
    <string name="str_enviar_relatorio">Enviar relatório</string>
    <string name="str_oportunidades">Oportunidades</string>
    <string name="str_administracao">Administração</string>
    <string name="str_configuracoes">Configurações</string>
    <string name="str_editar_perfil">Editar perfil</string>
    <string name="str_acerca">Acerca</string>
    <string name="versao_app">Versão: %s</string>
</resources>